build/k8s/10-namespace.yaml
## All resources will be created in this namespace
## To delete all resources created by this example, simply delete this namespace:
## kubectl delete -f rabbitmq_statefulsets
apiVersion: v1
kind: Namespace
metadata:
  name: wsprnet
