build/k8s/70-grid6-consumer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsprnet-grid6-depl
  namespace: wsprnet
  labels:
    app: wsprnet
    role: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wsprnet
  template:
    metadata:
      labels:
        app: wsprnet
    spec:
      containers:
        - name: wsprnet-grid6
          image: wsprnet/consumers
          imagePullPolicy: Never
