build/k8s/70-status-consumer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsprnet-status-depl
  namespace: wsprnet-rabbitmq
  labels:
    app: wsprnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wsprnet
  template:
    metadata:
      labels:
        app: wsprnet
    spec:
      containers:
        - name: wsprnet-status
          image: wsprnet/consumers
          imagePullPolicy: Never
