build/k8s/80-wsprnet-ingress-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsrpnet-ingress-depl
  namespace: wsprnet-rabbitmq
  labels:
    app: wsprnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wsprnet
  template:
    metadata:
      labels:
        app: wsprnet
    spec:
      containers:
        - name: wsprnet-ingress
          image: wsprnet/ingress
          imagePullPolicy: Never
