build/k8s/90-wsprnet-ingress-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsprnet-post-depl
  namespace: wsprnet
  labels:
    app: wsprnet-post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wsprnet-post
  template:
    metadata:
      labels:
        app: wsprnet-post
    spec:
      containers:
        - name: wsprnet-post
          image: wsprnet/ingress
          imagePullPolicy: Never
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
