build/k8s/80-wsrpnet-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsprnet-ingress-service
  namespace: wsprnet-rabbitmq
spec:
  selector:
    app: wsprnet-ingress
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30000
