build/k8s/services.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: wsprnet-rabbitmq
  name: rabbitmq
  labels:
    app: rabbitmq
    type: LoadBalancer
spec:
  type: NodePort
  ports:
   - name: http
     protocol: TCP
     port: 15672
     targetPort: 15672
     nodePort: 31672
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: 5672
     nodePort: 30672
  selector:
    app: rabbitmq
---
kind: Service
apiVersion: v1
metadata:
  namespace: wsprnet-rabbitmq
  name spot_service
