build/k8s/100-wsprnet-ingress-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsprnet-ingress-ingress
  namespace: wsprnet
spec:
  rules:
    - http:
        paths:
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: wsprnet-ingress-service
                port:
                  number: 80
