build/k8s/100-wsprnet-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wsprnet-ingress-ingress
  namespace: wsprnet-rabbitmq
spec:
  rules:
    - host: wsrpnet.org
      http:
        paths:
          - backend:
              serviceName: wsprnet-ingress-service
              servicePort: 80
