build/k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-traffic
  namespace: wsprnet-rabbitmq
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: wsprnet
      app.kubernetes.io/name: network-policies
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 5672 # AMQP
        - port: 5671 # AMQP + TLS
        - port: 15672 # HTTP API
        - port: 15671 # HTTP API + TLS
